Mark what is to be counted before inlining, so that every copy of a method counts
Receivers were counted in the graph a method is finally compiled from. Inlined
into a caller that knows what it passes, a call with several possible receivers
has become a direct call by then and is not counted, while the copies inlined
elsewhere are. Added up, the profile of the call held the receivers the
compiler could not work out: DoubleChromosome 99% at a call in Renaissance's
future-genetic where the truth, and Oracle's recording, is ArrayISeq 57%. A
build reading that guards for the rarer receiver. Entries were counted at the
top of compiled methods only, so a method that is always inlined had no count.

A probe now goes into each method's graph as it leaves parsing, ahead of every
virtual call and at the entry, through the compile queue's beforeEncode hook.
It travels with the method wherever that is inlined, takes on the calling
context as every node does, and becomes the counter it stands for after
inlining. Receiver counts on future-genetic agree with Oracle's to a part in
ten thousand, 4382 methods have a call count where 1626 had, and the optimized
image goes from 2208 ms an iteration to 2019.

A row of receivers keeps the frequent ones and not the first four to arrive:
four lambdas of the harness had taken the row of a call in a stream's loop, and
fifty million calls of the lambda the run spent its time in were dropped.